# Ymir

./: .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  COMPILING.md  Doxyfile  README.md  err.txt  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yaml  ci.yaml  nightly-release.yaml  release-notes-nightly.md  stable-release.yaml
apps/ymdasm/: CMakeLists.txt
apps/ymir-libretro/src/: libretro.cpp
apps/ymir-sdl3/: CMakeLists.txt
apps/ymir-sdl3/res/: io.github.strikerx3.ymir.xml
apps/ymir-sdl3/src/app/: app.cpp  settings.cpp  shared_context.cpp  shared_context.hpp
apps/ymir-sdl3/src/app/debug/: sh2_exec_analyst.cpp  sh2_exec_analyst.hpp  sh2_tracer.cpp  sh2_tracer.hpp
apps/ymir-sdl3/src/app/input/: input_events.hpp
apps/ymir-sdl3/src/app/services/: graphics_service.cpp  graphics_types.hpp
apps/ymir-sdl3/src/app/ui/views/debug/: sh2_data_stack_view.cpp  vdp2_debug_overlay_view.cpp  vdp2_vram_delay_view.cpp
apps/ymir-sdl3/src/app/ui/views/settings/: input_settings_view.cpp
apps/ymir-sdl3/src/app/ui/widgets/: peripheral_widgets.cpp
apps/ymir-sdl3/src/app/ui/windows/: about_window.cpp
libs/ymir-core/: CMakeLists.txt
libs/ymir-core/docs/: mainpage.hpp
libs/ymir-core/include/ymir/db/: game_db.hpp
libs/ymir-core/include/ymir/debug/: scsp_tracer_base.hpp  sh2_tracer_base.hpp
libs/ymir-core/include/ymir/hw/smpc/peripheral/: peripheral_defs.hpp
libs/ymir-core/include/ymir/hw/vdp/: vdp.hpp  vdp2_regs.hpp  vdp_callbacks.hpp  vdp_common_defs.hpp  vdp_configs.hpp  vdp_defs.hpp  vdp_state.hpp
libs/ymir-core/include/ymir/hw/vdp/renderer/: vdp_renderer.hpp  vdp_renderer_base.hpp  vdp_renderer_d3d11.hpp  vdp_renderer_defs.hpp  vdp_renderer_hw_base.hpp  vdp_renderer_null.hpp  vdp_renderer_sw.hpp
libs/ymir-core/include/ymir/util/: bit_ops.hpp  dev_assert.hpp  event.hpp  hashing.hpp
libs/ymir-core/res/embed/d3d11/: cs_test.hlsl  cs_vdp2_bgs.hlsl  cs_vdp2_compose.hlsl  ps_vdp2_compose.hlsl  vs_identity.hlsl
libs/ymir-core/src/ymir/db/: game_db.cpp
libs/ymir-core/src/ymir/hw/sh2/: sh2.cpp  sh2_decode.cpp  sh2_disasm.cpp
libs/ymir-core/src/ymir/hw/vdp/: vdp.cpp
libs/ymir-core/src/ymir/hw/vdp/renderer/: vdp_renderer_base.cpp  vdp_renderer_d3d11.cpp  vdp_renderer_hw_base.cpp  vdp_renderer_sw.cpp
libs/ymir-core/src/ymir/hw/vdp/renderer/d3d11/: d3d11_shader_cache.cpp  d3d11_shader_cache.hpp  d3d11_utils.hpp
libs/ymir-core/src/ymir/sys/: saturn.cpp
tests/ymir-core-tests/src/hw/vdp/: vdp_vram_access_patterns_testdata.inc  vdp_vram_access_patterns_tests.cpp
